[package]
name = "bakabin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["multipart"] }
futures-util = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
toml = "0.7.4"
uuid = { version = "1.3.3", features = ["v4"] }
