[package]
name = "bakabin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["multipart", "headers"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["fs"] }
uuid = { version = "1.3.3", features = ["v4"] }
